added test class and test suite class